assets/css/style.css
/* ... */
@media only screen and (max-width: 1199.98px) {
  .desktop-sidemenu .sidemenu-body .contact-info {
    margin-top: 50px;
  }
}

.desktop-sidemenu .sidemenu-body .revew {
  margin-top: auto;
  max-width: 244px;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.desktop-sidemenu .sidemenu-body .revew * {
  color: var(--color-white);
}

/*================================================
Mobile Menu Menu CSS
=================================================*/
.quanto-menu-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: rgba(var(--color-black-rgb), 0.6);
  z-index: 9999;
  width: 100%;
  height: 100%;
  transition: all ease 0.8s;
  opacity: 0;
  visibility: hidden;
}

.quanto-menu-wrapper .mobile-logo {
  display: block;
  text-align: left;
  max-width: 120px;
  background-color: var(--color-white);
}

.quanto-menu-wrapper .quanto-menu-toggle {
  width: 55px;
  height: 55px;
  line-height: 55px;
  font-size: 18px;
  z-index: 1;
  color: var(--color-white);
  display: flex;
  border-radius: 0;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  border-left: 1px solid rgba(var(--color-black-rgb), 0.1);
  padding: 0;
  outline: 0;
}

.quanto-menu-wrapper .quanto-menu-toggle i {
  color: var(--color-black);
}

.quanto-menu-wrapper .quanto-menu-area {
  width: 100%;
  max-width: 310px;
  background-color: var(--color-white);
  height: 100%;
  position: relative;
  left: -110%;
  opacity: 0;
  visibility: hidden;
  transition: all ease 1s;
  z-index: 1;
  padding: 0;
}

.quanto-menu-wrapper.quanto-body-visible {
  opacity: 1;
  visibility: visible;
}

.quanto-menu-wrapper.quanto-body-visible .quanto-menu-area {
  left: 0;
  opacity: 1;
  visibility: visible;
}

/* offcanvas v2 */

.quanto-menu-wrapper.v2 {
  transition: all ease 0.6s;
  height: 100vh;
}

.quanto-menu-wrapper.v2 .quanto-menu-area {
  transition: all ease 0.6s;
  max-width: 100%;
  display: flex;
  left: 110%;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left {
  max-width: 400px;
  width: 100%;
  flex-shrink: 0;
  border-right: 1px solid var(--color-4);
  padding-inline: 60px;
  padding-block: 40px 60px;
  background: var(--color-primary);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media only screen and (max-width: 1399.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left {
    max-width: 300px;
    padding-inline: 30px;
    padding-block: 20px 30px;
  }
}

@media only screen and (max-width: 1199.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left {
    max-width: 250px;
    padding-inline: 20px;
    padding-block: 20px;
  }
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-logo {
  max-width: 176px;
  background-color: transparent;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info {
  max-width: 244px;
  text-align: left;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .rating-point {
  color: var(--color-white);
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .stars {
  line-height: 1;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .stars ul {
  line-height: inherit;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .stars ul li {
  line-height: inherit;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .stars ul li i,
.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info .stars ul li svg {
  color: var(--color-white);
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-left .mobile-menu-info p {
  color: var(--color-white);
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center {
  width: 100%;
  background-color: var(--color-primary);
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu {
  min-height: 100%;
  padding-left: 136px;
  padding-block: 100px;
  /* For Firefox */
}

@media only screen and (max-width: 1399.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu {
    padding-left: 80px;
    padding-block: 80px;
  }
}

@media only screen and (max-width: 1199.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu {
    padding-left: 40px;
    padding-block: 60px;
  }
}

@media only screen and (max-width: 991.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu {
    padding-block: 40px;
    padding-left: 50px;
  }
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu::-webkit-scrollbar {
  width: 0px;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu::-webkit-scrollbar-thumb {
  background-color: transparent;
  border-radius: 0px;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu::-webkit-scrollbar-track {
  background-color: transparent;
  border-radius: 0px;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu scrollbar {
  scrollbar-color: transparent;
  scrollbar-width: unset;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu>ul>li {
  border-bottom: none;
}

.quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu>ul>li:not(:first-of-type) {
  margin-top: 45px;
}

@media only screen and (max-width: 1399.98px) {
  .quanto-menu-wrapper.v2 .quanto-menu-area .quanto-mobile-menu-center .quanto-mobile-menu>ul>li:not(:first-of-type) {
    margin-top: 25px;
  }
}
/* ... */

